Yeet shopType into the sun (closes #2103)