@@ -11,15 +11,16 @@ import legend.game.inventory.Item;
 import legend.game.inventory.ItemIcon;
 import legend.game.inventory.WhichMenu;
 import legend.game.modding.coremod.CoreMod;
-import legend.game.modding.events.inventory.ShopEquipmentEvent;
-import legend.game.modding.events.inventory.ShopItemEvent;
+import legend.game.modding.events.inventory.ShopContentsEvent;
 import legend.game.modding.events.inventory.ShopSellPriceEvent;
 import legend.game.types.ActiveStatsa0;
 import legend.game.types.EquipmentSlot;
 import legend.game.types.MessageBoxResult;
 import legend.game.types.Renderable58;
-import legend.game.types.ShopStruct40;
+import legend.game.types.Shop;
+import legend.lodmod.LodItems;
 import legend.lodmod.LodMod;
+import org.legendofdragoon.modloader.events.EventListener;
 
 import javax.annotation.Nullable;
 import java.util.ArrayList;
@@ -74,7 +75,13 @@ import static legend.game.Scus94491BpeSegment_800b.stats_800be5f8;
 import static legend.game.Scus94491BpeSegment_800b.uiFile_800bdc3c;
 import static legend.game.Scus94491BpeSegment_800b.whichMenu_800bdc38;
 
+@EventListener
 public class ShopScreen extends MenuScreen {
+  @EventListener
+  public static void addSomeShits(final ShopContentsEvent event) {
+    event.contents.add(new ShopEntry<>(LodItems.PSYCHE_BOMB_X.get(), 1));
+  }
+
   private static final String Not_enough_money_8011c468 = "Not enough\nmoney";
   private static final String Which_item_do_you_want_to_sell_8011c4e4 = "Which item do you\nwant to sell?";
   private static final String Which_weapon_do_you_want_to_sell_8011c524 = "Which weapon do\nyou want to sell?";
@@ -90,8 +97,8 @@ public class ShopScreen extends MenuScreen {
 
   private int equipCharIndex;
   private int menuIndex_8011e0dc;
-  private int menuIndex_8011e0e0;
-  private int menuScroll_8011e0e4;
+  private int invIndex_8011e0e0;
+  private int invScroll_8011e0e4;
   private Renderable58 renderable_8011e0f0;
   private Renderable58 renderable_8011e0f4;
   private Renderable58 selectedMenuOptionRenderablePtr_800bdbe0;
@@ -102,18 +109,11 @@ public class ShopScreen extends MenuScreen {
 
   /**
    * <ul>
-   *   <li>0 - Item Shop</li>
-   *   <li>1 - Weapon Shop</li>
+   *   <li>0 - Weapon Shop</li>
+   *   <li>1 - Item Shop</li>
    * </ul>
    */
-  private int shopType;
-  /**
-   * <ul>
-   *   <li>0 - Item Shop</li>
-   *   <li>1 - Weapon Shop</li>
-   * </ul>
-   */
-  private int shopType2;
+  private int sellType;
 
   private final Renderable58[] charRenderables = new Renderable58[9];
 
@@ -128,38 +128,25 @@ public class ShopScreen extends MenuScreen {
         this.inv.clear();
         loadCharacterStats();
         this.menuIndex_8011e0dc = 0;
-        this.menuIndex_8011e0e0 = 0;
-        this.menuScroll_8011e0e4 = 0;
+        this.invIndex_8011e0e0 = 0;
+        this.invScroll_8011e0e4 = 0;
         this.menuState = MenuState.LOAD_ITEMS_1;
       }
 
       case LOAD_ITEMS_1 -> {
         startFadeEffect(2, 10);
 
-        final ShopStruct40 shop = REGISTRIES.shop.getEntry(LodMod.id(LodMod.SHOP_IDS[shopId_8007a3b4])).get();
-        this.shopType = shop.shopType_00 & 1;
+        final Shop shop = REGISTRIES.shop.getEntry(LodMod.id(LodMod.SHOP_IDS[shopId_8007a3b4])).get();
 
-        if(this.shopType == 0) {
-          final List<ShopEntry<Equipment>> shopEntries = new ArrayList<>();
+        final List<ShopEntry<InventoryEntry>> shopEntries = new ArrayList<>();
 
-          for(int i = 0; i < shop.getItemCount(); i++) {
-            final Equipment equipment = (Equipment)shop.getItem(i);
-            shopEntries.add(new ShopEntry<>(equipment, equipment.price * 2));
-          }
-
-          final ShopEquipmentEvent event = EVENTS.postEvent(new ShopEquipmentEvent(shopId_8007a3b4, shopEntries));
-          this.inv.addAll(event.equipment);
-        } else {
-          final List<ShopEntry<Item>> shopEntries = new ArrayList<>();
-
-          for(int i = 0; i < shop.getItemCount(); i++) {
-            final Item item = (Item)shop.getItem(i);
-            shopEntries.add(new ShopEntry<>(item, item.getPrice() * 2));
-          }
-
-          final ShopItemEvent event = EVENTS.postEvent(new ShopItemEvent(shopId_8007a3b4, shopEntries));
-          this.inv.addAll(event.items);
+        for(int i = 0; i < shop.getInventoryCount(); i++) {
+          final InventoryEntry entry = shop.getItem(i);
+          shopEntries.add(new ShopEntry<>(entry, entry.getPrice() * 2));
         }
+
+        final ShopContentsEvent event = EVENTS.postEvent(new ShopContentsEvent(shop, shopEntries));
+        this.inv.addAll(event.contents);
 
         cacheCharacterSlots();
 
@@ -176,16 +163,20 @@ public class ShopScreen extends MenuScreen {
           this.charRenderables[charSlot] = this.allocateCharRenderable(this.FUN_8010a818(charSlot), 174, characterIndices_800bdbb8[charSlot]);
         }
 
-        this.renderShopMenu(this.menuIndex_8011e0dc, this.shopType);
+        this.renderShopMenu(this.menuIndex_8011e0dc);
+        this.renderShopTypeInfo(this.inv.getFirst().item instanceof Item);
         this.menuState = MenuState.RENDER_3;
       }
 
-      case RENDER_3 -> this.renderShopMenu(this.menuIndex_8011e0dc, this.shopType);
+      case RENDER_3 -> {
+        this.renderShopMenu(this.menuIndex_8011e0dc);
+        this.renderShopTypeInfo(this.inv.getFirst().item instanceof Item);
+      }
 
       case BUY_4 -> {
-        final ShopEntry<? extends InventoryEntry> entry = this.inv.get(this.menuScroll_8011e0e4 + this.menuIndex_8011e0e0);
+        final ShopEntry<? extends InventoryEntry> entry = this.inv.get(this.invScroll_8011e0e4 + this.invIndex_8011e0e0);
 
-        if(this.shopType == 0) {
+        if(entry.item instanceof Equipment) {
           this.renderEquipmentStatChange((Equipment)entry.item, characterIndices_800bdbb8[this.equipCharIndex]);
         } else {
           this.renderNumberOfItems((Item)entry.item);
@@ -196,81 +187,81 @@ public class ShopScreen extends MenuScreen {
         if(this.scrollAccumulator >= 1.0d) {
           this.scrollAccumulator -= 1.0d;
 
-          if(this.menuScroll_8011e0e4 > 0 && MathHelper.inBox(this.mouseX, this.mouseY, 138, 16, 220, 104)) {
-            this.scroll(this.menuScroll_8011e0e4 - 1);
+          if(this.invScroll_8011e0e4 > 0 && MathHelper.inBox(this.mouseX, this.mouseY, 138, 16, 220, 104)) {
+            this.scroll(this.invScroll_8011e0e4 - 1);
           }
         }
 
         if(this.scrollAccumulator <= -1.0d) {
           this.scrollAccumulator += 1.0d;
 
-          if(this.menuScroll_8011e0e4 < this.inv.size() - 6 && MathHelper.inBox(this.mouseX, this.mouseY, 138, 16, 220, 104)) {
-            this.scroll(this.menuScroll_8011e0e4 + 1);
+          if(this.invScroll_8011e0e4 < this.inv.size() - 6 && MathHelper.inBox(this.mouseX, this.mouseY, 138, 16, 220, 104)) {
+            this.scroll(this.invScroll_8011e0e4 + 1);
           }
         }
 
-        this.renderMenuEntries(this.inv, this.menuScroll_8011e0e4, this.renderable_8011e0f0, this.renderable_8011e0f4);
-        this.renderShopMenu(this.menuIndex_8011e0dc, this.shopType);
+        this.renderMenuEntries(this.inv, this.invScroll_8011e0e4, this.renderable_8011e0f0, this.renderable_8011e0f4);
+        this.renderShopMenu(this.menuIndex_8011e0dc);
       }
 
       case BUY_SELECT_CHAR_5 -> {
-        final ShopEntry<? extends InventoryEntry> equipment = this.inv.get(this.menuScroll_8011e0e4 + this.menuIndex_8011e0e0);
+        final ShopEntry<? extends InventoryEntry> equipment = this.inv.get(this.invScroll_8011e0e4 + this.invIndex_8011e0e0);
         this.renderEquipmentStatChange((Equipment)equipment.item, characterIndices_800bdbb8[this.equipCharIndex]);
         renderString(16, 122, I18n.translate(equipment.item.getDescriptionTranslationKey()), false);
-        this.renderMenuEntries(this.inv, this.menuScroll_8011e0e4, this.renderable_8011e0f0, this.renderable_8011e0f4);
-        this.renderShopMenu(this.menuIndex_8011e0dc, this.shopType);
+        this.renderMenuEntries(this.inv, this.invScroll_8011e0e4, this.renderable_8011e0f0, this.renderable_8011e0f4);
+        this.renderShopMenu(this.menuIndex_8011e0dc);
       }
 
       case SELL_10 -> {
         final int count;
-        if(this.shopType2 != 0) {
+        if(this.sellType != 0) {
           renderText(Which_item_do_you_want_to_sell_8011c4e4, 16, 128, UI_TEXT);
           count = gameState_800babc8.items_2e9.size();
 
-          if(this.menuScroll_8011e0e4 + this.menuIndex_8011e0e0 < count) {
-            renderString(193, 122, I18n.translate(gameState_800babc8.items_2e9.get(this.menuScroll_8011e0e4 + this.menuIndex_8011e0e0).getDescriptionTranslationKey()), false);
+          if(this.invScroll_8011e0e4 + this.invIndex_8011e0e0 < count) {
+            renderString(193, 122, I18n.translate(gameState_800babc8.items_2e9.get(this.invScroll_8011e0e4 + this.invIndex_8011e0e0).getDescriptionTranslationKey()), false);
           }
         } else {
           renderText(Which_weapon_do_you_want_to_sell_8011c524, 16, 128, UI_TEXT);
           count = gameState_800babc8.equipment_1e8.size();
 
-          if(this.menuScroll_8011e0e4 + this.menuIndex_8011e0e0 < count) {
-            renderString(193, 122, I18n.translate(gameState_800babc8.equipment_1e8.get(this.menuScroll_8011e0e4 + this.menuIndex_8011e0e0).getDescriptionTranslationKey()), false);
+          if(this.invScroll_8011e0e4 + this.invIndex_8011e0e0 < count) {
+            renderString(193, 122, I18n.translate(gameState_800babc8.equipment_1e8.get(this.invScroll_8011e0e4 + this.invIndex_8011e0e0).getDescriptionTranslationKey()), false);
           }
         }
 
         if(this.scrollAccumulator >= 1.0d) {
           this.scrollAccumulator -= 1.0d;
 
-          if(this.menuScroll_8011e0e4 > 0 && MathHelper.inBox(this.mouseX, this.mouseY, 138, 16, 220, 104)) {
+          if(this.invScroll_8011e0e4 > 0 && MathHelper.inBox(this.mouseX, this.mouseY, 138, 16, 220, 104)) {
             playMenuSound(1);
-            this.menuScroll_8011e0e4--;
+            this.invScroll_8011e0e4--;
 
-            if(this.shopType2 == 0) {
-              this.FUN_8010a864(gameState_800babc8.equipment_1e8.get(this.menuScroll_8011e0e4 + this.menuIndex_8011e0e0));
+            if(this.sellType == 0) {
+              this.FUN_8010a864(gameState_800babc8.equipment_1e8.get(this.invScroll_8011e0e4 + this.invIndex_8011e0e0));
             }
 
-            this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(this.menuIndex_8011e0e0);
+            this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(this.invIndex_8011e0e0);
           }
         }
 
         if(this.scrollAccumulator <= -1.0d) {
           this.scrollAccumulator += 1.0d;
 
-          if(this.menuScroll_8011e0e4 < count - 6 && MathHelper.inBox(this.mouseX, this.mouseY, 138, 16, 220, 104)) {
+          if(this.invScroll_8011e0e4 < count - 6 && MathHelper.inBox(this.mouseX, this.mouseY, 138, 16, 220, 104)) {
             playMenuSound(1);
-            this.menuScroll_8011e0e4++;
+            this.invScroll_8011e0e4++;
 
-            if(this.shopType2 == 0) {
-              this.FUN_8010a864(gameState_800babc8.equipment_1e8.get(this.menuScroll_8011e0e4 + this.menuIndex_8011e0e0));
+            if(this.sellType == 0) {
+              this.FUN_8010a864(gameState_800babc8.equipment_1e8.get(this.invScroll_8011e0e4 + this.invIndex_8011e0e0));
             }
 
-            this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(this.menuIndex_8011e0e0);
+            this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(this.invIndex_8011e0e0);
           }
         }
 
-        this.renderItemList(this.menuScroll_8011e0e4, this.shopType2, this.renderable_8011e0f0, this.renderable_8011e0f4);
-        this.renderShopMenu(this.menuIndex_8011e0dc, this.shopType2);
+        this.renderSellList(this.invScroll_8011e0e4, this.sellType == 1, this.renderable_8011e0f0, this.renderable_8011e0f4);
+        this.renderShopMenu(this.menuIndex_8011e0dc);
       }
 
       case _16, _17 -> {
@@ -283,7 +274,8 @@ public class ShopScreen extends MenuScreen {
           this.menuState = this.confirmDest;
         }
 
-        this.renderShopMenu(this.menuIndex_8011e0dc, this.shopType);
+        this.renderShopMenu(this.menuIndex_8011e0dc);
+        this.renderShopTypeInfo(this.inv.getFirst().item instanceof Item);
       }
 
       case UNLOAD_19 -> whichMenu_800bdc38 = WhichMenu.UNLOAD;
@@ -291,7 +283,7 @@ public class ShopScreen extends MenuScreen {
   }
 
   private void scroll(final int scroll) {
-    this.menuScroll_8011e0e4 = scroll;
+    this.invScroll_8011e0e4 = scroll;
   }
 
   private int FUN_8010a864(@Nullable final Equipment equipment) {
@@ -318,15 +310,17 @@ public class ShopScreen extends MenuScreen {
     return s3;
   }
 
-  private void renderShopMenu(final int selectedMenuItem, final int isItemMenu) {
+  private void renderShopMenu(final int selectedMenuItem) {
     renderText(Buy_8011c6a4, 72, this.getShopMenuYOffset(0) + 2, selectedMenuItem != 0 ? UI_TEXT_CENTERED : UI_TEXT_SELECTED_CENTERED);
     renderText(Sell_8011c6ac, 72, this.getShopMenuYOffset(1) + 2, selectedMenuItem != 1 ? UI_TEXT_CENTERED : UI_TEXT_SELECTED_CENTERED);
     renderText(Carried_8011c6b8, 72, this.getShopMenuYOffset(2) + 2, selectedMenuItem != 2 ? UI_TEXT_CENTERED : UI_TEXT_SELECTED_CENTERED);
     renderText(Leave_8011c6c8, 72, this.getShopMenuYOffset(3) + 2, selectedMenuItem != 3 ? UI_TEXT_CENTERED : UI_TEXT_SELECTED_CENTERED);
+  }
 
+  private void renderShopTypeInfo(final boolean isItemShop) {
     final int size;
     final int current;
-    if(isItemMenu != 0) {
+    if(isItemShop) {
       size = CONFIG.getConfig(CoreMod.INVENTORY_SIZE_CONFIG.get());
       current = gameState_800babc8.items_2e9.size();
       final Renderable58 renderable = allocateOneFrameGlyph(94, 16, 16);
@@ -388,8 +382,8 @@ public class ShopScreen extends MenuScreen {
     renderText(Number_kept_8011c7f4 + count, 195, 125, UI_TEXT);
   }
 
-  private void renderItemList(final int firstItem, final int isItemMenu, final Renderable58 upArrow, final Renderable58 downArrow) {
-    if(isItemMenu != 0) {
+  private void renderSellList(final int firstItem, final boolean isItemShop, final Renderable58 upArrow, final Renderable58 downArrow) {
+    if(isItemShop) {
       int i;
       for(i = 0; firstItem + i < gameState_800babc8.items_2e9.size() && i < 6; i++) {
         final Item item = gameState_800babc8.items_2e9.get(firstItem + i);
@@ -420,6 +414,8 @@ public class ShopScreen extends MenuScreen {
     }
 
     upArrow.setVisible(firstItem != 0);
+
+    this.renderShopTypeInfo(isItemShop);
   }
 
   private void renderMenuEntries(final List<ShopEntry<? extends InventoryEntry>> list, final int startItemIndex, final Renderable58 upArrow, final Renderable58 downArrow) {
@@ -433,6 +429,8 @@ public class ShopScreen extends MenuScreen {
 
     upArrow.setVisible(startItemIndex != 0);
     downArrow.setVisible(i + startItemIndex < list.size());
+
+    this.renderShopTypeInfo(list.get(startItemIndex + this.invIndex_8011e0e0).item instanceof Item);
   }
 
   private Renderable58 allocateCharRenderable(final int x, final int y, final int glyph) {
@@ -489,21 +487,21 @@ public class ShopScreen extends MenuScreen {
           playMenuSound(1);
           this.menuIndex_8011e0dc = i;
 
-          this.menuScroll_8011e0e4 = 0;
-          this.menuIndex_8011e0e0 = 0;
+          this.invScroll_8011e0e4 = 0;
+          this.invIndex_8011e0e0 = 0;
           this.selectedMenuOptionRenderablePtr_800bdbe0.y_44 = this.getShopMenuYOffset(i);
           return InputPropagation.HANDLED;
         }
       }
     } else if(this.menuState == MenuState.BUY_4) {
-      for(int i = 0; i < Math.min(6, this.inv.size() - this.menuScroll_8011e0e4); i++) {
-        if(this.menuIndex_8011e0e0 != i && MathHelper.inBox(this.mouseX, this.mouseY, 138, this.menuEntryY(i) - 2, 220, 17)) {
+      for(int i = 0; i < Math.min(6, this.inv.size() - this.invScroll_8011e0e4); i++) {
+        if(this.invIndex_8011e0e0 != i && MathHelper.inBox(this.mouseX, this.mouseY, 138, this.menuEntryY(i) - 2, 220, 17)) {
           playMenuSound(1);
-          this.menuIndex_8011e0e0 = i;
+          this.invIndex_8011e0e0 = i;
           this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(i);
 
-          if(this.shopType == 0) {
-            this.equipCharIndex = this.FUN_8010a864((Equipment)this.inv.get(this.menuScroll_8011e0e4 + i).item);
+          if(this.inv.get(this.invScroll_8011e0e4 + i).item instanceof final Equipment equipment) {
+            this.equipCharIndex = this.FUN_8010a864(equipment);
           }
 
           return InputPropagation.HANDLED;
@@ -519,12 +517,12 @@ public class ShopScreen extends MenuScreen {
         }
       }
     } else if(this.menuState == MenuState.SELL_10) {
-      final int count = this.shopType2 != 0 ? gameState_800babc8.items_2e9.size() : gameState_800babc8.equipment_1e8.size();
+      final int count = this.sellType != 0 ? gameState_800babc8.items_2e9.size() : gameState_800babc8.equipment_1e8.size();
 
       for(int i = 0; i < Math.min(count, 6); i++) {
-        if(this.menuIndex_8011e0e0 != i && MathHelper.inBox(this.mouseX, this.mouseY, 138, this.menuEntryY(i), 220, 17)) {
+        if(this.invIndex_8011e0e0 != i && MathHelper.inBox(this.mouseX, this.mouseY, 138, this.menuEntryY(i), 220, 17)) {
           playMenuSound(1);
-          this.menuIndex_8011e0e0 = i;
+          this.invIndex_8011e0e0 = i;
           this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(i);
           return InputPropagation.HANDLED;
         }
@@ -546,8 +544,8 @@ public class ShopScreen extends MenuScreen {
           playMenuSound(2);
           this.menuIndex_8011e0dc = i;
 
-          this.menuScroll_8011e0e4 = 0;
-          this.menuIndex_8011e0e0 = 0;
+          this.invScroll_8011e0e4 = 0;
+          this.invIndex_8011e0e0 = 0;
           this.selectedMenuOptionRenderablePtr_800bdbe0.y_44 = this.getShopMenuYOffset(i);
 
           this.handleSelectedMenu(i);
@@ -555,18 +553,16 @@ public class ShopScreen extends MenuScreen {
         }
       }
     } else if(this.menuState == MenuState.BUY_4) {
-      for(int i = 0; i < Math.min(6, this.inv.size() - this.menuScroll_8011e0e4); i++) {
+      for(int i = 0; i < Math.min(6, this.inv.size() - this.invScroll_8011e0e4); i++) {
         if(MathHelper.inBox(this.mouseX, this.mouseY, 138, this.menuEntryY(i) - 2, 220, 17)) {
           playMenuSound(2);
-          this.menuIndex_8011e0e0 = i;
+          this.invIndex_8011e0e0 = i;
           this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(i);
 
-          if(this.shopType == 0) {
-            this.equipCharIndex = this.FUN_8010a864((Equipment)this.inv.get(this.menuScroll_8011e0e4 + i).item);
-          }
-
+          final ShopEntry<? extends InventoryEntry> inv = this.inv.get(this.invScroll_8011e0e4 + i);
           final boolean hasSpace;
-          if(this.shopType == 0) {
+          if(inv.item instanceof final Equipment equipment) {
+            this.equipCharIndex = this.FUN_8010a864(equipment);
             hasSpace = gameState_800babc8.equipment_1e8.size() < 255;
           } else {
             hasSpace = gameState_800babc8.items_2e9.size() < CONFIG.getConfig(CoreMod.INVENTORY_SIZE_CONFIG.get());
@@ -574,14 +570,14 @@ public class ShopScreen extends MenuScreen {
 
           if(!hasSpace) {
             menuStack.pushScreen(new MessageBoxScreen("Cannot carry any more", 0, result -> { }));
-          } else if(gameState_800babc8.gold_94 < this.inv.get(this.menuScroll_8011e0e4 + this.menuIndex_8011e0e0).price) {
+          } else if(gameState_800babc8.gold_94 < inv.price) {
             menuStack.pushScreen(new MessageBoxScreen(Not_enough_money_8011c468, 0, result -> { }));
           } else {
-            if(this.shopType != 0) {
+            if(inv.item instanceof final Item item) {
               menuStack.pushScreen(new MessageBoxScreen("Buy item?", 2, result -> {
                 if(result == MessageBoxResult.YES) {
-                  if(giveItem((Item)this.inv.get(this.menuScroll_8011e0e4 + this.menuIndex_8011e0e0).item)) {
-                    gameState_800babc8.gold_94 -= this.inv.get(this.menuScroll_8011e0e4 + this.menuIndex_8011e0e0).price;
+                  if(giveItem(item)) {
+                    gameState_800babc8.gold_94 -= inv.price;
                   } else {
                     menuStack.pushScreen(new MessageBoxScreen("Cannot carry any more", 0, onResult -> { }));
                   }
@@ -606,15 +602,15 @@ public class ShopScreen extends MenuScreen {
 
           menuStack.pushScreen(new MessageBoxScreen("Buy item?", 2, result -> {
             if(result == MessageBoxResult.YES) {
-              if(canEquip((Equipment)this.inv.get(this.menuScroll_8011e0e4 + this.menuIndex_8011e0e0).item, characterIndices_800bdbb8[this.equipCharIndex])) {
+              if(canEquip((Equipment)this.inv.get(this.invScroll_8011e0e4 + this.invIndex_8011e0e0).item, characterIndices_800bdbb8[this.equipCharIndex])) {
                 menuStack.pushScreen(new MessageBoxScreen("Equip item?", 2, result1 -> {
                   if(result1 == MessageBoxResult.YES) {
-                    final EquipItemResult equipResult = equipItem((Equipment)this.inv.get(this.menuScroll_8011e0e4 + this.menuIndex_8011e0e0).item, characterIndices_800bdbb8[this.equipCharIndex]);
+                    final EquipItemResult equipResult = equipItem((Equipment)this.inv.get(this.invScroll_8011e0e4 + this.invIndex_8011e0e0).item, characterIndices_800bdbb8[this.equipCharIndex]);
 
                     if(equipResult.previousEquipment != null) {
                       if(equipResult.success) {
                         if(giveEquipment(equipResult.previousEquipment)) {
-                          gameState_800babc8.gold_94 -= this.inv.get(this.menuScroll_8011e0e4 + this.menuIndex_8011e0e0).price;
+                          gameState_800babc8.gold_94 -= this.inv.get(this.invScroll_8011e0e4 + this.invIndex_8011e0e0).price;
                         } else {
                           equipItem(equipResult.previousEquipment, characterIndices_800bdbb8[this.equipCharIndex]);
                           menuStack.pushScreen(new MessageBoxScreen("Cannot carry any more", 0, onResult -> {}));
@@ -625,7 +621,7 @@ public class ShopScreen extends MenuScreen {
                       }
                     }
                   } else {
-                    this.giveUnequipped((Equipment)this.inv.get(this.menuScroll_8011e0e4 + this.menuIndex_8011e0e0).item);
+                    this.giveUnequipped((Equipment)this.inv.get(this.invScroll_8011e0e4 + this.invIndex_8011e0e0).item);
                   }
 
                   this.menuState = MenuState.BUY_4;
@@ -633,7 +629,7 @@ public class ShopScreen extends MenuScreen {
                   this.charHighlight = null;
                 }));
               } else {
-                this.giveUnequipped((Equipment)this.inv.get(this.menuScroll_8011e0e4 + this.menuIndex_8011e0e0).item);
+                this.giveUnequipped((Equipment)this.inv.get(this.invScroll_8011e0e4 + this.invIndex_8011e0e0).item);
                 this.menuState = MenuState.BUY_4;
                 unloadRenderable(this.charHighlight);
                 this.charHighlight = null;
@@ -645,15 +641,15 @@ public class ShopScreen extends MenuScreen {
         }
       }
     } else if(this.menuState == MenuState.SELL_10) {
-      final int count = this.shopType2 != 0 ? gameState_800babc8.items_2e9.size() : gameState_800babc8.equipment_1e8.size();
+      final int count = this.sellType != 0 ? gameState_800babc8.items_2e9.size() : gameState_800babc8.equipment_1e8.size();
 
       for(int i = 0; i < Math.min(count, 6); i++) {
         if(MathHelper.inBox(this.mouseX, this.mouseY, 138, this.menuEntryY(i), 220, 17)) {
-          this.menuIndex_8011e0e0 = i;
+          this.invIndex_8011e0e0 = i;
           this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(i);
 
-          final int slot = this.menuScroll_8011e0e4 + this.menuIndex_8011e0e0;
-          if(this.shopType2 != 0 && slot >= gameState_800babc8.items_2e9.size() || this.shopType2 == 0 && (slot >= gameState_800babc8.equipment_1e8.size() || !gameState_800babc8.equipment_1e8.get(slot).canBeDiscarded())) {
+          final int slot = this.invScroll_8011e0e4 + this.invIndex_8011e0e0;
+          if(this.sellType != 0 && slot >= gameState_800babc8.items_2e9.size() || this.sellType == 0 && (slot >= gameState_800babc8.equipment_1e8.size() || !gameState_800babc8.equipment_1e8.get(slot).canBeDiscarded())) {
             playMenuSound(40);
           } else {
             playMenuSound(2);
@@ -662,7 +658,7 @@ public class ShopScreen extends MenuScreen {
               if(Objects.requireNonNull(result) == MessageBoxResult.YES) {
                 final InventoryEntry inv;
                 final boolean success;
-                if(this.shopType2 != 0) {
+                if(this.sellType != 0) {
                   inv = gameState_800babc8.items_2e9.get(slot);
                   success = takeItem(slot);
                 } else {
@@ -674,13 +670,13 @@ public class ShopScreen extends MenuScreen {
                   final ShopSellPriceEvent event = EVENTS.postEvent(new ShopSellPriceEvent(shopId_8007a3b4, inv, inv.getPrice()));
                   addGold(event.price);
 
-                  if(this.menuScroll_8011e0e4 > 0 && this.menuScroll_8011e0e4 + 6 > count - 1) {
-                    this.menuScroll_8011e0e4--;
+                  if(this.invScroll_8011e0e4 > 0 && this.invScroll_8011e0e4 + 6 > count - 1) {
+                    this.invScroll_8011e0e4--;
                   }
 
-                  if(this.menuIndex_8011e0e0 != 0 && this.menuIndex_8011e0e0 > count - 2) {
-                    this.menuIndex_8011e0e0--;
-                    this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(this.menuIndex_8011e0e0);
+                  if(this.invIndex_8011e0e0 != 0 && this.invIndex_8011e0e0 > count - 2) {
+                    this.invIndex_8011e0e0--;
+                    this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(this.invIndex_8011e0e0);
                   }
                 }
               }
@@ -698,11 +694,11 @@ public class ShopScreen extends MenuScreen {
   protected void handleSelectedMenu(final int i) {
     switch(i) {
       case 0 -> { // Buy
-        this.selectedMenuOptionRenderablePtr_800bdbe4 = allocateUiElement(0x7b, 0x7b, 170, this.menuEntryY(this.menuIndex_8011e0e0));
+        this.selectedMenuOptionRenderablePtr_800bdbe4 = allocateUiElement(0x7b, 0x7b, 170, this.menuEntryY(this.invIndex_8011e0e0));
         FUN_80104b60(this.selectedMenuOptionRenderablePtr_800bdbe4);
 
-        if(this.shopType == 0) {
-          this.equipCharIndex = this.FUN_8010a864((Equipment)this.inv.get(this.menuScroll_8011e0e4 + this.menuIndex_8011e0e0).item);
+        if(this.inv.get(this.invScroll_8011e0e4 + this.invIndex_8011e0e0).item instanceof final Equipment equipment) {
+          this.equipCharIndex = this.FUN_8010a864(equipment);
         }
 
         this.renderable_8011e0f0 = allocateUiElement(0x3d, 0x44, 358, this.menuEntryY(0));
@@ -714,9 +710,9 @@ public class ShopScreen extends MenuScreen {
         menuStack.pushScreen(new MessageBoxScreen("What do you want to sell?", "Armed", "Items", 2, result -> {
           switch(result) {
             case YES -> {
-              this.menuIndex_8011e0e0 = 0;
-              this.menuScroll_8011e0e4 = 0;
-              this.shopType2 = 0;
+              this.invIndex_8011e0e0 = 0;
+              this.invScroll_8011e0e4 = 0;
+              this.sellType = 0;
 
               if(!gameState_800babc8.equipment_1e8.isEmpty()) {
                 this.menuState = MenuState.SELL_10;
@@ -724,16 +720,16 @@ public class ShopScreen extends MenuScreen {
                 this.renderable_8011e0f0 = allocateUiElement(0x3d, 0x44, 358, this.menuEntryY(0));
                 this.renderable_8011e0f4 = allocateUiElement(0x35, 0x3c, 358, this.menuEntryY(5));
                 FUN_80104b60(this.selectedMenuOptionRenderablePtr_800bdbe4);
-                this.FUN_8010a864(gameState_800babc8.equipment_1e8.get(0));
+                this.FUN_8010a864(gameState_800babc8.equipment_1e8.getFirst());
               } else {
                 menuStack.pushScreen(new MessageBoxScreen("You have no equipment\nto sell", 0, result1 -> {}));
               }
             }
 
             case NO -> {
-              this.shopType2 = 1;
-              this.menuScroll_8011e0e4 = 0;
-              this.menuIndex_8011e0e0 = 0;
+              this.sellType = 1;
+              this.invScroll_8011e0e4 = 0;
+              this.invIndex_8011e0e0 = 0;
 
               if(!gameState_800babc8.items_2e9.isEmpty()) {
                 this.menuState = MenuState.SELL_10;
@@ -796,8 +792,8 @@ public class ShopScreen extends MenuScreen {
       this.menuIndex_8011e0dc--;
     }
 
-    this.menuScroll_8011e0e4 = 0;
-    this.menuIndex_8011e0e0 = 0;
+    this.invScroll_8011e0e4 = 0;
+    this.invIndex_8011e0e0 = 0;
     this.selectedMenuOptionRenderablePtr_800bdbe0.y_44 = this.getShopMenuYOffset(this.menuIndex_8011e0dc);
   }
 
@@ -808,8 +804,8 @@ public class ShopScreen extends MenuScreen {
       this.menuIndex_8011e0dc++;
     }
 
-    this.menuScroll_8011e0e4 = 0;
-    this.menuIndex_8011e0e0 = 0;
+    this.invScroll_8011e0e4 = 0;
+    this.invIndex_8011e0e0 = 0;
     this.selectedMenuOptionRenderablePtr_800bdbe0.y_44 = this.getShopMenuYOffset(this.menuIndex_8011e0dc);
   }
 
@@ -821,8 +817,10 @@ public class ShopScreen extends MenuScreen {
   private void menuBuy4Select() {
     playMenuSound(2);
 
+    final ShopEntry<? extends InventoryEntry> inv = this.inv.get(this.invScroll_8011e0e4 + this.invIndex_8011e0e0);
+
     final boolean hasSpace;
-    if(this.shopType == 0) {
+    if(inv.item instanceof Equipment) {
       hasSpace = gameState_800babc8.equipment_1e8.size() < 255;
     } else {
       hasSpace = gameState_800babc8.items_2e9.size() < CONFIG.getConfig(CoreMod.INVENTORY_SIZE_CONFIG.get());
@@ -830,13 +828,13 @@ public class ShopScreen extends MenuScreen {
 
     if(!hasSpace) {
       menuStack.pushScreen(new MessageBoxScreen("Cannot carry anymore", 0, result -> { }));
-    } else if(gameState_800babc8.gold_94 < this.inv.get(this.menuScroll_8011e0e4 + this.menuIndex_8011e0e0).price) {
+    } else if(gameState_800babc8.gold_94 < inv.price) {
       menuStack.pushScreen(new MessageBoxScreen(Not_enough_money_8011c468, 0, result -> { }));
-    } else if(this.shopType != 0) {
+    } else if(inv.item instanceof final Item item) {
       menuStack.pushScreen(new MessageBoxScreen("Buy item?", 2, result -> {
         if(result == MessageBoxResult.YES) {
-          if(giveItem((Item)this.inv.get(this.menuScroll_8011e0e4 + this.menuIndex_8011e0e0).item)) {
-            gameState_800babc8.gold_94 -= this.inv.get(this.menuScroll_8011e0e4 + this.menuIndex_8011e0e0).price;
+          if(giveItem(item)) {
+            gameState_800babc8.gold_94 -= inv.price;
           } else {
             menuStack.pushScreen(new MessageBoxScreen("Cannot carry any more", 0, onResult -> { }));
           }
@@ -852,48 +850,48 @@ public class ShopScreen extends MenuScreen {
   private void menuBuy4NavigateUp() {
     playMenuSound(1);
 
-    if(this.menuIndex_8011e0e0 > 0) {
-      this.menuIndex_8011e0e0--;
-    } else if(this.menuScroll_8011e0e4 > 0) {
-      this.menuScroll_8011e0e4--;
+    if(this.invIndex_8011e0e0 > 0) {
+      this.invIndex_8011e0e0--;
+    } else if(this.invScroll_8011e0e4 > 0) {
+      this.invScroll_8011e0e4--;
     }
 
-    this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(this.menuIndex_8011e0e0);
+    this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(this.invIndex_8011e0e0);
 
-    if(this.shopType == 0) {
-      this.equipCharIndex = this.FUN_8010a864((Equipment)this.inv.get(this.menuScroll_8011e0e4 + this.menuIndex_8011e0e0).item);
+    if(this.inv.get(this.invScroll_8011e0e4 + this.invIndex_8011e0e0).item instanceof final Equipment equipment) {
+      this.equipCharIndex = this.FUN_8010a864(equipment);
     }
   }
 
   private void menuBuy4NavigateDown() {
     playMenuSound(1);
 
-    if(this.menuScroll_8011e0e4 + this.menuIndex_8011e0e0 >= this.inv.size()) {
+    if(this.invScroll_8011e0e4 + this.invIndex_8011e0e0 >= this.inv.size()) {
       playMenuSound(40);
       return;
     }
 
-    if(this.menuIndex_8011e0e0 < 5 && this.menuIndex_8011e0e0 < this.inv.size() - 1) {
-      this.menuIndex_8011e0e0++;
-    } else if((this.menuScroll_8011e0e4 + this.menuIndex_8011e0e0) < this.inv.size() - 1) {
-      this.menuScroll_8011e0e4++;
+    if(this.invIndex_8011e0e0 < 5 && this.invIndex_8011e0e0 < this.inv.size() - 1) {
+      this.invIndex_8011e0e0++;
+    } else if((this.invScroll_8011e0e4 + this.invIndex_8011e0e0) < this.inv.size() - 1) {
+      this.invScroll_8011e0e4++;
     }
 
-    this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(this.menuIndex_8011e0e0);
+    this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(this.invIndex_8011e0e0);
 
-    if(this.shopType == 0) {
-      this.equipCharIndex = this.FUN_8010a864((Equipment)this.inv.get(this.menuScroll_8011e0e4 + this.menuIndex_8011e0e0).item);
+    if(this.inv.get(this.invScroll_8011e0e4 + this.invIndex_8011e0e0).item instanceof final Equipment equipment) {
+      this.equipCharIndex = this.FUN_8010a864(equipment);
     }
   }
 
   private void menuBuy4NavigateTop() {
-    if(this.menuIndex_8011e0e0 != 0) {
+    if(this.invIndex_8011e0e0 != 0) {
       playMenuSound(1);
-      this.menuIndex_8011e0e0 = 0;
-      this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(this.menuIndex_8011e0e0);
+      this.invIndex_8011e0e0 = 0;
+      this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(this.invIndex_8011e0e0);
 
-      if(this.shopType == 0) {
-        this.equipCharIndex = this.FUN_8010a864((Equipment)this.inv.get(this.menuScroll_8011e0e4 + this.menuIndex_8011e0e0).item);
+      if(this.inv.get(this.invScroll_8011e0e4 + this.invIndex_8011e0e0).item instanceof final Equipment equipment) {
+        this.equipCharIndex = this.FUN_8010a864(equipment);
       }
     }
   }
@@ -901,52 +899,52 @@ public class ShopScreen extends MenuScreen {
   private void menuBuy4NavigateBottom() {
     if(this.inv.size() >= 6) {
       playMenuSound(1);
-      this.menuIndex_8011e0e0 = 5;
-      this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(this.menuIndex_8011e0e0);
+      this.invIndex_8011e0e0 = 5;
+      this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(this.invIndex_8011e0e0);
     } else {
       playMenuSound(1);
-      this.menuIndex_8011e0e0 = this.inv.size() - 1;
-      this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(this.menuIndex_8011e0e0);
+      this.invIndex_8011e0e0 = this.inv.size() - 1;
+      this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(this.invIndex_8011e0e0);
     }
 
-    if(this.shopType == 0) {
-      this.equipCharIndex = this.FUN_8010a864((Equipment)this.inv.get(this.menuScroll_8011e0e4 + this.menuIndex_8011e0e0).item);
+    if(this.inv.get(this.invScroll_8011e0e4 + this.invIndex_8011e0e0).item instanceof final Equipment equipment) {
+      this.equipCharIndex = this.FUN_8010a864(equipment);
     }
   }
 
   private void menuBuy4NavigatePageUp() {
-    if(this.menuScroll_8011e0e4 - 6 >= 0) {
+    if(this.invScroll_8011e0e4 - 6 >= 0) {
       playMenuSound(1);
-      this.menuScroll_8011e0e4 -= 6;
-      this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(this.menuIndex_8011e0e0);
+      this.invScroll_8011e0e4 -= 6;
+      this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(this.invIndex_8011e0e0);
     } else {
-      if(this.menuScroll_8011e0e4 != 0) {
+      if(this.invScroll_8011e0e4 != 0) {
         playMenuSound(1);
-        this.menuScroll_8011e0e4 = 0;
-        this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(this.menuIndex_8011e0e0);
+        this.invScroll_8011e0e4 = 0;
+        this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(this.invIndex_8011e0e0);
       }
     }
 
-    if(this.shopType == 0) {
-      this.equipCharIndex = this.FUN_8010a864((Equipment)this.inv.get(this.menuScroll_8011e0e4 + this.menuIndex_8011e0e0).item);
+    if(this.inv.get(this.invScroll_8011e0e4 + this.invIndex_8011e0e0).item instanceof final Equipment equipment) {
+      this.equipCharIndex = this.FUN_8010a864(equipment);
     }
   }
 
   private void menuBuy4NavigatePageDown() {
-    if((this.menuScroll_8011e0e4 + this.menuIndex_8011e0e0) + 6 < this.inv.size() - 7) {
+    if((this.invScroll_8011e0e4 + this.invIndex_8011e0e0) + 6 < this.inv.size() - 7) {
       playMenuSound(1);
-      this.menuScroll_8011e0e4 += 6;
-      this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(this.menuIndex_8011e0e0);
+      this.invScroll_8011e0e4 += 6;
+      this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(this.invIndex_8011e0e0);
     } else {
-      if(this.inv.size() > 6 && this.menuScroll_8011e0e4 != this.inv.size() - 6) {
+      if(this.inv.size() > 6 && this.invScroll_8011e0e4 != this.inv.size() - 6) {
         playMenuSound(1);
-        this.menuScroll_8011e0e4 = this.inv.size() - 6;
-        this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(this.menuIndex_8011e0e0);
+        this.invScroll_8011e0e4 = this.inv.size() - 6;
+        this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(this.invIndex_8011e0e0);
       }
     }
 
-    if(this.shopType == 0) {
-      this.equipCharIndex = this.FUN_8010a864((Equipment)this.inv.get(this.menuScroll_8011e0e4 + this.menuIndex_8011e0e0).item);
+    if(this.inv.get(this.invScroll_8011e0e4 + this.invIndex_8011e0e0).item instanceof final Equipment equipment) {
+      this.equipCharIndex = this.FUN_8010a864(equipment);
     }
   }
 
@@ -962,15 +960,15 @@ public class ShopScreen extends MenuScreen {
 
     menuStack.pushScreen(new MessageBoxScreen("Buy item?", 2, result -> {
       if(result == MessageBoxResult.YES) {
-        if(canEquip((Equipment)this.inv.get(this.menuScroll_8011e0e4 + this.menuIndex_8011e0e0).item, characterIndices_800bdbb8[this.equipCharIndex])) {
+        if(canEquip((Equipment)this.inv.get(this.invScroll_8011e0e4 + this.invIndex_8011e0e0).item, characterIndices_800bdbb8[this.equipCharIndex])) {
           menuStack.pushScreen(new MessageBoxScreen("Equip item?", 2, result1 -> {
             if(result1 == MessageBoxResult.YES) {
-              final EquipItemResult equipResult = equipItem((Equipment)this.inv.get(this.menuScroll_8011e0e4 + this.menuIndex_8011e0e0).item, characterIndices_800bdbb8[this.equipCharIndex]);
+              final EquipItemResult equipResult = equipItem((Equipment)this.inv.get(this.invScroll_8011e0e4 + this.invIndex_8011e0e0).item, characterIndices_800bdbb8[this.equipCharIndex]);
 
               if(equipResult.previousEquipment != null) {
                 if(equipResult.success) {
                   if(giveEquipment(equipResult.previousEquipment)) {
-                    gameState_800babc8.gold_94 -= this.inv.get(this.menuScroll_8011e0e4 + this.menuIndex_8011e0e0).price;
+                    gameState_800babc8.gold_94 -= this.inv.get(this.invScroll_8011e0e4 + this.invIndex_8011e0e0).price;
                   } else {
                     equipItem(equipResult.previousEquipment, characterIndices_800bdbb8[this.equipCharIndex]);
                     menuStack.pushScreen(new MessageBoxScreen("Cannot carry any more", 0, onResult -> {}));
@@ -981,7 +979,7 @@ public class ShopScreen extends MenuScreen {
                 }
               }
             } else {
-              this.giveUnequipped((Equipment)this.inv.get(this.menuScroll_8011e0e4 + this.menuIndex_8011e0e0).item);
+              this.giveUnequipped((Equipment)this.inv.get(this.invScroll_8011e0e4 + this.invIndex_8011e0e0).item);
             }
 
             this.menuState = MenuState.BUY_4;
@@ -989,7 +987,7 @@ public class ShopScreen extends MenuScreen {
             this.charHighlight = null;
           }));
         } else {
-          this.giveUnequipped((Equipment)this.inv.get(this.menuScroll_8011e0e4 + this.menuIndex_8011e0e0).item);
+          this.giveUnequipped((Equipment)this.inv.get(this.invScroll_8011e0e4 + this.invIndex_8011e0e0).item);
           this.menuState = MenuState.BUY_4;
           unloadRenderable(this.charHighlight);
           this.charHighlight = null;
@@ -1033,8 +1031,8 @@ public class ShopScreen extends MenuScreen {
   }
 
   private void menuSell10Select() {
-    final int slot = this.menuScroll_8011e0e4 + this.menuIndex_8011e0e0;
-    if(this.shopType2 != 0 && slot >= gameState_800babc8.items_2e9.size() || this.shopType2 == 0 && (slot >= gameState_800babc8.equipment_1e8.size() || !gameState_800babc8.equipment_1e8.get(slot).canBeDiscarded())) {
+    final int slot = this.invScroll_8011e0e4 + this.invIndex_8011e0e0;
+    if(this.sellType != 0 && slot >= gameState_800babc8.items_2e9.size() || this.sellType == 0 && (slot >= gameState_800babc8.equipment_1e8.size() || !gameState_800babc8.equipment_1e8.get(slot).canBeDiscarded())) {
       playMenuSound(40);
     } else {
       playMenuSound(2);
@@ -1044,7 +1042,7 @@ public class ShopScreen extends MenuScreen {
           final InventoryEntry inv;
           final boolean taken;
           final int count;
-          if(this.shopType2 != 0) {
+          if(this.sellType != 0) {
             inv = gameState_800babc8.items_2e9.get(slot);
             taken = takeItem(slot);
             count = gameState_800babc8.items_2e9.size();
@@ -1058,13 +1056,13 @@ public class ShopScreen extends MenuScreen {
             final ShopSellPriceEvent event = EVENTS.postEvent(new ShopSellPriceEvent(shopId_8007a3b4, inv, inv.getPrice()));
             addGold(event.price);
 
-            if(this.menuScroll_8011e0e4 > 0 && this.menuScroll_8011e0e4 + 6 > count) {
-              this.menuScroll_8011e0e4--;
+            if(this.invScroll_8011e0e4 > 0 && this.invScroll_8011e0e4 + 6 > count) {
+              this.invScroll_8011e0e4--;
             }
 
-            if(this.menuIndex_8011e0e0 != 0 && this.menuIndex_8011e0e0 > count - 1) {
-              this.menuIndex_8011e0e0--;
-              this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(this.menuIndex_8011e0e0);
+            if(this.invIndex_8011e0e0 != 0 && this.invIndex_8011e0e0 > count - 1) {
+              this.invIndex_8011e0e0--;
+              this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(this.invIndex_8011e0e0);
             }
           }
         }
@@ -1075,13 +1073,13 @@ public class ShopScreen extends MenuScreen {
   private void menuSell10NavigateUp() {
     playMenuSound(1);
 
-    if(this.menuIndex_8011e0e0 > 0) {
-      this.menuIndex_8011e0e0--;
-    } else if(this.menuScroll_8011e0e4 > 0) {
-      this.menuScroll_8011e0e4--;
+    if(this.invIndex_8011e0e0 > 0) {
+      this.invIndex_8011e0e0--;
+    } else if(this.invScroll_8011e0e4 > 0) {
+      this.invScroll_8011e0e4--;
     }
 
-    this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(this.menuIndex_8011e0e0);
+    this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(this.invIndex_8011e0e0);
 
   }
 
@@ -1089,83 +1087,83 @@ public class ShopScreen extends MenuScreen {
     playMenuSound(1);
 
     final int itemCount;
-    if(this.shopType2 == 0) { // equipment
+    if(this.sellType == 0) { // equipment
       itemCount = gameState_800babc8.equipment_1e8.size();
     } else { // items
       itemCount = gameState_800babc8.items_2e9.size();
     }
 
-    if(this.menuIndex_8011e0e0 < 5) {
-      this.menuIndex_8011e0e0++;
-    } else if((this.menuIndex_8011e0e0 + this.menuScroll_8011e0e4) < itemCount - 1) {
-      this.menuScroll_8011e0e4++;
+    if(this.invIndex_8011e0e0 < 5) {
+      this.invIndex_8011e0e0++;
+    } else if((this.invIndex_8011e0e0 + this.invScroll_8011e0e4) < itemCount - 1) {
+      this.invScroll_8011e0e4++;
     } else {
       playMenuSound(40);
     }
 
-    this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(this.menuIndex_8011e0e0);
+    this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(this.invIndex_8011e0e0);
   }
 
   private void menuSell10NavigateTop() {
-    if(this.menuIndex_8011e0e0 != 0) {
+    if(this.invIndex_8011e0e0 != 0) {
       playMenuSound(1);
-      this.menuIndex_8011e0e0 = 0;
-      this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(this.menuIndex_8011e0e0);
+      this.invIndex_8011e0e0 = 0;
+      this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(this.invIndex_8011e0e0);
     }
   }
 
   private void menuSell10NavigateBottom() {
     final int itemCount;
-    if(this.shopType2 == 0) { // equipment
+    if(this.sellType == 0) { // equipment
       itemCount = gameState_800babc8.equipment_1e8.size();
     } else { // items
       itemCount = gameState_800babc8.items_2e9.size();
     }
 
-    if(itemCount >= 6 && this.menuIndex_8011e0e0 != 5) {
+    if(itemCount >= 6 && this.invIndex_8011e0e0 != 5) {
       playMenuSound(1);
-      this.menuIndex_8011e0e0 = 5;
-      this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(this.menuIndex_8011e0e0);
+      this.invIndex_8011e0e0 = 5;
+      this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(this.invIndex_8011e0e0);
     } else {
       if(itemCount < 6) {
         playMenuSound(1);
-        this.menuIndex_8011e0e0 = itemCount - 1;
-        this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(this.menuIndex_8011e0e0);
+        this.invIndex_8011e0e0 = itemCount - 1;
+        this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(this.invIndex_8011e0e0);
       }
     }
   }
 
   private void menuSell10NavigatePageUp() {
-    if(this.menuScroll_8011e0e4 - 6 >= 0) {
+    if(this.invScroll_8011e0e4 - 6 >= 0) {
       playMenuSound(1);
-      this.menuScroll_8011e0e4 -= 6;
-      this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(this.menuIndex_8011e0e0);
+      this.invScroll_8011e0e4 -= 6;
+      this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(this.invIndex_8011e0e0);
     } else {
-      if(this.menuScroll_8011e0e4 != 0) {
+      if(this.invScroll_8011e0e4 != 0) {
         playMenuSound(1);
-        this.menuScroll_8011e0e4 = 0;
-        this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(this.menuIndex_8011e0e0);
+        this.invScroll_8011e0e4 = 0;
+        this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(this.invIndex_8011e0e0);
       }
     }
   }
 
   private void menuSell10NavigatePageDown() {
     final int itemCount;
-    if(this.shopType2 == 0) { // equipment
+    if(this.sellType == 0) { // equipment
       itemCount = gameState_800babc8.equipment_1e8.size();
     } else { // items
       itemCount = gameState_800babc8.items_2e9.size();
     }
 
-    if((this.menuScroll_8011e0e4 + this.menuIndex_8011e0e0) + 6 < itemCount - 7) {
+    if((this.invScroll_8011e0e4 + this.invIndex_8011e0e0) + 6 < itemCount - 7) {
       playMenuSound(1);
-      this.menuScroll_8011e0e4 += 6;
-      this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(this.menuIndex_8011e0e0);
+      this.invScroll_8011e0e4 += 6;
+      this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(this.invIndex_8011e0e0);
     } else {
-      if(itemCount > 6 && this.menuScroll_8011e0e4 != itemCount - 6) {
+      if(itemCount > 6 && this.invScroll_8011e0e4 != itemCount - 6) {
         playMenuSound(1);
-        this.menuScroll_8011e0e4 = itemCount - 6;
-        this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(this.menuIndex_8011e0e0);
+        this.invScroll_8011e0e4 = itemCount - 6;
+        this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(this.invIndex_8011e0e0);
       }
     }
   }
@@ -1328,7 +1326,7 @@ public class ShopScreen extends MenuScreen {
 
   public static class ShopEntry<T extends InventoryEntry> {
     public final T item;
-    public final int price;
+    public int price;
 
     public ShopEntry(final T item, final int price) {
       this.item = item;
